solucionando error merge

--- a/frontend/Proyecto-Enterarte/src/app/modules/events/components/event-item/event-item.component.html
+++ b/frontend/Proyecto-Enterarte/src/app/modules/events/components/event-item/event-item.component.html
@@ -24,6 +24,8 @@
                     <a [href]="event.social_networks.website">Sitio</a>
                   </li>
                 </ul> 
+
+                <!-- asdasd -->
         </ul>
     </div>
 </section>
