--- a/frontend/Proyecto-Enterarte/src/app/modules/events/components/event-item/event-item.component.html
+++ b/frontend/Proyecto-Enterarte/src/app/modules/events/components/event-item/event-item.component.html
@@ -25,7 +25,7 @@
                   </li>
                 </ul> 
 
-                <!-- asdasd -->
+                <!-- asdasdsds -->
         </ul>
     </div>
 </section>
